--- a/CCAADD.html
+++ b/CCAADD.html
@@ -5,7 +5,7 @@
      EP1000 Yue Yang
     </title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
-    <link rel="shortcut icon" type="image/svg" href="Images/IconRedoSS.wmf">
+    <link rel="shortcut icon" type="image/png" href="Images/IconRedoSS.png">
   </head>
 
   <body>
@@ -13,7 +13,7 @@
     <div id="container">
       <div id="header">
         <h1>EP1000 Digital Fabrication & Prototyping</h1>
-        <h4>P2010773</h4>
+        <h4>Computer Aided Drawing</h4>
       </div>
       <div id="content">
 
@@ -30,18 +30,102 @@
         <div id="navsub">
             <ul class="navsub">
               <li><a style="color:#32ff32;" href="#top">Back To Top</a></li>
+              <li><a style="color:#ff9600;" href="learn.html" class="button">Back To EP1000</a></li>
+              <li><a href="#EX1.1">Exercise 1.1</a></li>
+              <li><a href="#EX1.2">Exercise 1.2</a></li>
+              <li><a href="#EX2.1">Exercise 2.1</a></li>
+              <li><a href="#EX2.2">Exercise 2.2</a></li>
+              <li><a href="#EX2.3">Exercise 2.3</a></li>
+              <li><a href="#EX3.1">Exercise 3.1</a></li>
+              <li><a href="#EX3.2">Exercise 3.2</a></li>
+              <li><a href="#EX3.3B">Exercise 3.3B</a></li>
+              <li><a href="#EX3.3T">Exercise 3.3T</a></li>
             </ul>
         </div>
 
         <div id="main">
           <h2>Home Page</h2>
             <br>
-            <h4>Introduction To EP1000</h4>
+            <a id="EX1.1"></a>
+            <h3>Exercise 1.1- Drawing Exercise 1</h3>
             <br>
-            <h3>Digital Fabrication and Prototyping</h3>
-
-            <p><iframe src="https://ichat2788.autodesk360.com/shares/public/SH9285eQTcf875d3c5394c035d1e374253f8?mode=embed" width="100%" height="80%" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe></p>
-
+            <iframe src="https://ichat2788.autodesk360.com/shares/public/SH9285eQTcf875d3c539dd1d68f2db338e3d?mode=embed" width="100%" height="80%" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <a id="EX1.2"></a>
+            <h3>Exercise 1.2- Drawing Exercise 2</h3>
+            <br>
+            <iframe src="https://ichat2788.autodesk360.com/shares/public/SH9285eQTcf875d3c53927a48de52a07b0b4?mode=embed" width="100%" height="80%" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <a id="EX2.1"></a>
+            <h3>Exercise 2.1- Nametag</h3>
+            <br>
+            <iframe src="https://ichat2788.autodesk360.com/shares/public/SH9285eQTcf875d3c5394c035d1e374253f8?mode=embed" width="100%" height="80%" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <a id="EX2.2"></a>
+            <h3>Exercise 2.2- Lego</h3>
+            <br>
+            <iframe src="https://ichat2788.autodesk360.com/shares/public/SH9285eQTcf875d3c53933ceda47b09bd7b7?mode=embed" width="100%" height="80%" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <a id="EX2.3"></a>
+            <h3>Exercise 2.3- Shelled Cube</h3>
+            <br>
+            <iframe src="https://ichat2788.autodesk360.com/shares/public/SH9285eQTcf875d3c5398919ae983aebf466?mode=embed" width="100%" height="80%" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <a id="EX3.1"></a>
+            <h3>Exercise 3.1- Mug</h3>
+            <br>
+            <iframe src="https://ichat2788.autodesk360.com/shares/public/SH9285eQTcf875d3c5399f540d90d8f7edd2?mode=embed" width="100%" height="80%" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <a id="EX3.2"></a>
+            <h3>Exercise 3.2- Hex Nut</h3>
+            <br>
+            <iframe src="https://ichat2788.autodesk360.com/shares/public/SH9285eQTcf875d3c539bad49027759819c5?mode=embed" width="100%" height="80%" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
+            <br>
+            <br>
+            <br>
+            <br>
+            <a id="EX3.3B"></a>
+            <h3>Exercise 3.3- Chess Knight Base Part</h3>
+            <br>
+            <iframe src="https://ichat2788.autodesk360.com/shares/public/SH9285eQTcf875d3c53932dac1bef89d9b7f?mode=embed" width="100%" height="80%" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <a id="EX3.3T"></a>
+            <h3>Exercise 3.3- Chess Knight Top Part</h3>
+            <br>
+            <iframe src="https://ichat2788.autodesk360.com/shares/public/SH9285eQTcf875d3c5398099363142dfb6fd?mode=embed" width="100%" height="80%" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
 
         </div>
       </div>
