--- a/LASC.html
+++ b/LASC.html
@@ -13,7 +13,7 @@
     <div id="container">
       <div id="header">
         <h1>EP1000 Digital Fabrication & Prototyping</h1>
-        <h4>Expectations</h4>
+        <h4>Laser Cutting</h4>
       </div>
       <div id="content">
 
@@ -25,7 +25,6 @@
               <li><a href="expect.html">Expectations</a></li>
               <li><a href="learn.html">EP1000 Class</a></li>
               <li><a href="project.html">Main Project</a></li>
-            </ul>
         </div>
 
         <div id="navsub">
@@ -35,32 +34,27 @@
         </div>
 
         <div id="main">
-          <h2>Why EP1000</h2>
+          <h2>Home Page</h2>
             <br>
+            <h4>Introduction To EP1000</h4>
             <br>
-            <h3>Learning HTML</h3>
-            <p>
-              I have always been interested in programming, be it C++, python, javascript or html.
-              Since this module mandates the use of html, i used it as an opportunity to learn and use html for website coding.
-            </p>
-            <br>
-            <br>
-            <h3>Opportunity to fabricate own product</h3>
-            <p>
-              This module provides me with the materials and knowledge to fabricate a product of my own choosing.
-              <br>
-              I decided on making a reading light with the following features:
-              <dl>
-                <dd>variable red light intensity (knob or slider) </dd>
-                <dd>variable white light intensity (knob or slider) </dd>
-                <dd>3 swivel joints, 2 rotary joints </dd>
-                <dd>main power button </dd>
-                <dd>illuminated buttons for ease of use at night (very soft lighting)</dd>
-                <dd>multiple memory settings (2-4)</dd>
-              </dl>
-            </p>
+            <h3>Digital Fabrication and Prototyping</h3>
 
+            <p><a href="https://rdorville.github.io/digfab/" target="_blank">Link to Module information website</a></p>
+            <p>This module intends to teach students the following skills:</p>
+            <ul>
+              <li>◦Digital Fabrication Techniques:</li>
+                <ul>
+                  <li>-Computer Aided Design</li>
+                  <li>-3D Printing Processes</li>
+                  <li>-Laser Cutting</li>
+                </ul>
+              <li>◦Embedded Controllers (Sensing & Actuation)</li>
+              <li>◦Covert Design into a Working Prototype</li>
+              <li>◦Document then present Prototype</li>
+            </ul>
             <br>
+
         </div>
       </div>
 
