--- a/WebDev.html
+++ b/WebDev.html
@@ -5,7 +5,7 @@
      EP1000 Yue Yang
     </title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
-    <link rel="shortcut icon" type="image/svg" href="Images/IconRedoSS.wmf">
+    <link rel="shortcut icon" type="image/png" href="Images/IconRedoSS.png">
   </head>
 
   <body>
@@ -13,7 +13,7 @@
     <div id="container">
       <div id="header">
         <h1>EP1000 Digital Fabrication & Prototyping</h1>
-        <h4>Skills Learnt In Module</h4>
+        <h4>Website Development</h4>
       </div>
       <div id="content">
 
@@ -40,14 +40,8 @@
         </div>
 
         <div id="main">
-          <h2>Skills Learnt From EP1000 Module</h2>
-            <br>
-            <hr>
-            <br>
-            <a id="webdev"></a>
-            <h3>Web Development</h3>
-            <br>
-
+          <h2>Web Development</h2>
+          <hr>
             <h4>Materials Used</h4>
             <p>
               <h5>Borrowed Book</h5>
@@ -62,6 +56,37 @@
                 <li>Chapter 7: Styling Content Using Cascading Style Sheets</li>
                 <li>Chapter 8: Advanced CSS</li>
               </ul>
+            <h4>Online Resources:</h4>
+              <ul>
+                <li><a href="https://www.w3schools.com/" target="_blank">W3Schools</a></li>
+                <li><a href="https://stackoverflow.com/" target="_blank">StackOverflow</a></li>
+                <li></li>
+              </ul>
+
+              <h4>EP1000 Provided Sources</h4>
+              <br>
+              <h6><a href="https://www.youtube.com/playlist?list=PLlj9BrHKq9WKaz8UV3BjEqicn-C3qHxy4" target="blank">Playlist by Jake Wright on Web Development.</a></h6>
+              <br>
+              <br>
+              <a href="https://www.youtube.com/watch?v=bWPMSSsVdPk&list=PLlj9BrHKq9WKaz8UV3BjEqicn-C3qHxy4&index=2" target="blank">Learn HTML in 12 Minutes</a>
+              <br>
+              <br>
+              <a href="https://www.youtube.com/watch?v=KJ13lX20FqU&list=PLlj9BrHKq9WKaz8UV3BjEqicn-C3qHxy4&index=3" target="blank">Learn More HTML in 12 Minutes</a>
+              <br>
+              <br>
+              <a href="https://www.youtube.com/watch?v=ZdP0KM49IVk&list=PLlj9BrHKq9WKaz8UV3BjEqicn-C3qHxy4&index=4" target="blank">Learn PHP in 15 minutes</a>
+              <br>
+              <br>
+              <a href="https://www.youtube.com/watch?v=0afZj1G0BIE&list=PLlj9BrHKq9WKaz8UV3BjEqicn-C3qHxy4&index=6" target="blank">Learn CSS in 12 Minutes (Link Provided by lecturers)</a>
+              <br>
+              <br>
+              <a href="https://www.youtube.com/watch?v=Ukg_U3CnJWI&list=PLlj9BrHKq9WKaz8UV3BjEqicn-C3qHxy4&index=6" target="blank">Learn JavaScript in 12 Minutes</a>
+              <br>
+              <br>
+              <a href="https://www.youtube.com/watch?v=YFl2mCHdv24&list=PLlj9BrHKq9WKaz8UV3BjEqicn-C3qHxy4&index=7" target="blank">Learn Docker in 12 Minutes</a>
+              <br>
+              <br>
+              <a href="https://jakewright.net/" target="blank">Jake Wright's website</a>
             </p>
 
             <br>
@@ -117,7 +142,7 @@
               <br>
               <br>
               <br>
-              Version 5 of the icon, final product.
+              Version 5 of the icon, was supposed to be final product.
               <!--Use table to showcase difference in pixel count!-->
               <br>
               <br>
@@ -130,7 +155,17 @@
               Actual version used, 32x32 pixels
               <img src="Images/iconEP1000v5.png">
               <br>
-              Since there was a need to change the icon from pixel based to vector based, i decided to change the entire icon to something that is more cursive and a little more artistic.
+              Since there was a need to change the icon from pixel based to vector based, i decided to change the entire icon to something that is a little more artistic.
+              <br>
+              <br>
+              <br>
+              Icon Redo (saved as PNG, 3200px by 3200px)
+              <img src="Images/IconRedoSSLRG.png">
+              <br>
+              <br>
+              <br>
+              Icon Redo (actual size)
+              <img src="Images/IconRedoSS.png">
             </p>
             <br>
             <a id="HTML"></a>
@@ -178,8 +213,8 @@
             <h3>Javascript</h3>
             <p>
               Javascript is a part of website development that i have not touched.
-
-
+              <br>
+              <a href="https://www.w3schools.com/js/default.asp" target="blank">Link to w3schools for more information on JavaScript in website development</a>
             </p>
             <br>
             <hr>
