--- a/learn.html
+++ b/learn.html
@@ -5,7 +5,7 @@
      EP1000 Yue Yang
     </title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
-    <link rel="shortcut icon" type="image/svg" href="Images/IconRedoSS.wmf">
+    <link rel="shortcut icon" type="image/png" href="Images/IconRedoSS.png">
   </head>
 
   <body>
@@ -31,7 +31,7 @@
         <div id="navsub">
           <ul class="navsub">
             <li><a style="color:#32ff32;" href="#top">Back To Top</a></li>
-            <li><a>Click on the following for more details</a></li>
+            <li><a>Click on the following for details</a></li>
             <li><a href="WebDev.html">Web Development</a></li>
             <li><a href="CCAADD.html">CAD</a></li>
             <li><a href="#3Dprint">3D Printing</a></li>
@@ -50,121 +50,31 @@
 
             <br>
             <hr>
-            <h6><a href="https://rdorville.github.io/EP1000/" target="_blank">Website by lecturer on all things related to EP 1000</a></h6>
+            <a href="https://rdorville.github.io/ep1000digfab/index.html" target="_blank"><h6>Website by lecturer on all things related to EP 1000</h6></a>
             <hr>
-            <br>
+            <h6>Links embed in titles lead to more details on their subject<h6>
+            <hr>
             <a id="webdev"></a>
             <a href="webdev.html"><h3>Web Development</h3></a>
-            <br>
-
-            <h4>Materials Used</h4>
-            <p>
-              <h5>Borrowed Book</h5>
-              I borrowed a book from the Singapore Polytechnic library, <a href="http://www.websitedevelopmentbook.com/hindex.html" target="_blank">
-              Introduciton To Web Development Using HTML5</a>. The link leads to a website that contains the essentials of the book.
-              The condensed content from the website greatly aided in the coding of this website, with the most used sections of the book being the chapters shown below:
-              <ul class="list1">
-                <li>Chapter 2: Integrating Images</li>
-                <li>Chapter 3: Using Hyperlinks to Connect Content</li>
-                <li>Chapter 4: Presenting Lists</li>
-                <li>Chapter 5: Formatting Content with Tables</li>
-                <li>Chapter 7: Styling Content Using Cascading Style Sheets</li>
-                <li>Chapter 8: Advanced CSS</li>
-              </ul>
-
-              <h4>EP1000 Provided Sources</h4>
-              <br>
-              <h6><a href="https://www.youtube.com/playlist?list=PLlj9BrHKq9WKaz8UV3BjEqicn-C3qHxy4" target="blank">Playlist by Jake Wright on Web Development.</a></h6>
-              <br>
-              <br>
-              <a href="https://www.youtube.com/watch?v=bWPMSSsVdPk&list=PLlj9BrHKq9WKaz8UV3BjEqicn-C3qHxy4&index=2" target="blank">Learn HTML in 12 Minutes</a>
-              <br>
-              <br>
-              <a href="https://www.youtube.com/watch?v=KJ13lX20FqU&list=PLlj9BrHKq9WKaz8UV3BjEqicn-C3qHxy4&index=3" target="blank">Learn More HTML in 12 Minutes</a>
-              <br>
-              <br>
-              <a href="https://www.youtube.com/watch?v=ZdP0KM49IVk&list=PLlj9BrHKq9WKaz8UV3BjEqicn-C3qHxy4&index=4" target="blank">Learn PHP in 15 minutes</a>
-              <br>
-              <br>
-              <a href="https://www.youtube.com/watch?v=0afZj1G0BIE&list=PLlj9BrHKq9WKaz8UV3BjEqicn-C3qHxy4&index=6" target="blank">Learn CSS in 12 Minutes (Link Provided by lecturers)</a>
-              <br>
-              <br>
-              <a href="https://www.youtube.com/watch?v=Ukg_U3CnJWI&list=PLlj9BrHKq9WKaz8UV3BjEqicn-C3qHxy4&index=6" target="blank">Learn JavaScript in 12 Minutes</a>
-              <br>
-              <br>
-              <a href="https://www.youtube.com/watch?v=YFl2mCHdv24&list=PLlj9BrHKq9WKaz8UV3BjEqicn-C3qHxy4&index=7" target="blank">Learn Docker in 12 Minutes</a>
-              <br>
-              <br>
-              <a href="https://jakewright.net/" target="blank">Jake Wright's website</a>
-
-            </p>
-            <br>
-            <p>
-
-            <br>
-            <h4>CSS</h4>
-            <p>
-              CSS stands for Cascading Style Sheets, it is a method used to describe the presentaion of a document written in languages such as HTML <b>(HyperText Markup Language)</b> or XML <b>(eXtendable Markup Language)</b>
-              enables programmers to change the look, feel and overall presentaion of a website, allowing developers to customise every aspect of their websites to their liking.
-              The website template used as first draft for this site is detailed in <a href="https://www.youtube.com/watch?v=0afZj1G0BIE&list=PLlj9BrHKq9WKaz8UV3BjEqicn-C3qHxy4&index=6" target="blank"> this video by Jake Wright </a>
-            </p>
-            <br>
-            <p>
-            Examples of CSS being used to great effect:
-            <ul>
-              <li style="color:#0000ff;">Blue coloured line of text</li>
-              <li style="color:#00ff00;font-size: 5vw;">Green coloured, large font line of text</li>
-              <li><a href="https://www.google.com/" target="blank">Link to google.com</a></li>
-            </ul>
-          </p>
-            <br>
-            <h4>Javascript</h4>
-            <p>
-              Javascript is used in website development to aid or enable the use of:
-              <dl>
-                <li>Dynamically Updating Content</li>
-                <li>Multimedia Control</li>
-                <li>Animate Images</li>
-                <li>Others unmentioned</li>
-              </dl>
-              JavaScript is a scripting language that is plenty useful in supplementing the shortfalls of both HTML and CSS, completing websites that are otherwise impossible to make.
-            </p>
-            <br>
             <hr>
-            <br>
             <a id="CadChess"></a>
-            <h3>CAD (Computer Aided Design)</h3>
-            <p></p>
-            <br>
+            <a href="CCAADD.html"><h3>CAD (Computer Aided Design)</h3></a>
             <hr>
-            <br>
             <a id="3Dprint"></a>
             <h3>3D Printing (Additive Manufacturing)</h3>
-            <br>
             <hr>
-            <br>
             <a id="lascut"></a>
             <h3>Laser Cutting</h3>
-            <h4>
-            <>
-            <br>
             <hr>
-            <br>
             <a id="electronic"></a>
             <h3>Electronics</h3>
-            <br>
             <hr>
-            <br>
             <a id="arduino"></a>
             <h3>Arduino</h3>
-            <br>
             <hr>
-            <br>
             <a id="input"></a>
             <h3>Input Devices</h3>
-            <br>
             <hr>
-            <br>
             <a id="output"></a>
             <h3>Output Devices</h3>
             <br>
