--- a/personalpage.html
+++ b/personalpage.html
@@ -5,7 +5,7 @@
      EP1000 Yue Yang
     </title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
-    <link rel="shortcut icon" type="image/svg" href="Images/IconRedoSS.wmf">
+    <link rel="shortcut icon" type="image/png" href="Images/IconRedoSS.png">
   </head>
 
   <body>
@@ -36,34 +36,30 @@
 
         <div id="main">
           <br>
-          <h2 style= "text-align: center;">All about this face's owner</h2>
+          <h2 style= "text-align: center">All about this face's owner</h2>
           <br>
           <br>
-          <img src="Images/SNAIL.jpg">
-          <br>
-          <h2 style="text-align: center;">Full Name: Ang Yue Yang</h2>
-          <br>
-          <h3 style="text-align: center;"
-          <a href= mailto: Email: AYANG75.20@ichat.sp.edu.sg>Email: AYANG75.20@ichat.sp.edu.sg (click to email)</a
-          </h3>
-          <p style="text-align: center;">
-          Address: Seng Kang Town, Singapore City
-          <br>
-          Course of Study: Diploma in Aeronautical Engineering (DARE)
-          <br>
-          Likes: .....
-          <br>
-          Dislikes: .....
-          <br>
-          Hobbies: .....
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          No, i am not putting actual personal information onto the website i made for this EP1000
-          </p>
-
+          <table>
+            <!--Table, Left-->
+            <th width=20%>
+            </style>
+              <img src="Images/ZordonKnockoff.png">
+            </th>
+              <!--Table, Right-->
+            <th><h2>Name: Yue Yang</h2>
+              <p style="text-align: left">
+                Yup. The name's Yue Yang. I'm a 3rd year stuudent in Singapore Polytechnic
+                , studying Aeronautical Engineering under the class of DARE/FT/3A/23
+                <br>
+                <br>
+                Telegram ID: 764708363
+                <a href="mailto:AYANG75.20@ichat.sp.edu.sg"><h3>
+                Email: AYANG75.20@ichat.sp.edu.sg (click to email)
+                </h3></a>
+                <br>
+              </p>
+            </th>
+          </table>
         </div>
       </div>
 
