--- a/project.html
+++ b/project.html
@@ -5,7 +5,7 @@
      EP1000 Yue Yang
     </title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
-    <link rel="shortcut icon" type="image/svg" href="Images/IconRedoSS.wmf">
+    <link rel="shortcut icon" type="image/png" href="Images/IconRedoSS.png">
   </head>
 
   <body>
