--- a/CCAADD.html
+++ b/CCAADD.html
@@ -44,7 +44,8 @@
         </div>
 
         <div id="main">
-          <h2>Home Page</h2>
+          <h2>Computer Aided Drawing</h2>
+            <hr>
             <br>
             <a id="EX1.1"></a>
             <h3>Exercise 1.1- Drawing Exercise 1</h3>
