--- a/LASC.html
+++ b/LASC.html
@@ -30,11 +30,16 @@
         <div id="navsub">
             <ul class="navsub">
               <li><a style="color:#32ff32;" href="#top">Back To Top</a></li>
-            </ul>
+              <li><a style="color:#ff9600;" href="learn.html" class="button">Back To EP1000</a></li>
+              <li><a href="#EX1.1">Exercise 1.1</a></li>
+              <li><a href="#EX1.2">Exercise 1.2</a></lI>
+              <li><a href="#EX1.3">Exercise 1.3</a></li>
+
         </div>
 
         <div id="main">
-          <h2>Home Page</h2>
+          <h2>Laser Cutting</h2>
+            <hr>
             <br>
             <h4>Introduction To EP1000</h4>
             <br>
