--- a/learn.html
+++ b/learn.html
@@ -35,7 +35,7 @@
             <li><a href="WebDev.html">Web Development</a></li>
             <li><a href="CCAADD.html">CAD</a></li>
             <li><a href="#3Dprint">3D Printing</a></li>
-            <li><a href="#lascut">Laser Cutting</a></li>
+            <li><a href="LASC.html">Laser Cutting</a></li>
             <li><a href="#electronic">Electronics</a></li>
             <li><a href="#arduino">Arduino</a></li>
             <li><a href="#input">Input Devices</a></li>
