--- a/electric.html
+++ b/electric.html
@@ -13,7 +13,7 @@
     <div id="container">
       <div id="header">
         <h1>EP1000 Digital Fabrication & Prototyping</h1>
-        <h4>Laser Cutting</h4>
+        <h4>Electrionics</h4>
       </div>
       <div id="content">
 
@@ -33,51 +33,30 @@
               <li><a style="color:#ff9600;" href="learn.html" class="button">Back To EP1000</a></li>
               <li><a href="#EX1.1">Exercise 1.1</a></li>
               <li><a href="#EX1.2">Exercise 1.2</a></lI>
-              <li><a href="#EX1.3">Exercise 1.3</a></li>
-              <li><a href="#ASBX">Accessory Box</a></li>
 
         </div>
 
         <div id="main">
-          <h2>Laser Cutting</h2>
+          <h2>Electronics</h2>
             <hr>
             <a id="EX1.1"></a>
-            <h3>Exercise 1.1- Laser Cutting Exercise</h3>
+            <h3>Exercise 1.1- Running Lights</h3>
             <br>
-            <iframe src="https://ichat2788.autodesk360.com/shares/public/SH9285eQTcf875d3c5393095f28f13be1ef7?mode=embed" width="100%" height="80%" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
+            <iframe width="100%" height="80%" src="https://www.tinkercad.com/embed/0EYikyGLnDb?editbtn=1" frameborder="0" marginwidth="0" marginheight="0" scrolling="no"></iframe>
             <br>
             <br>
             <br>
             <br>
             <br>
             <a id="EX1.2"></a>
-            <h3>Exercise 1.2- Name Tag</h3>
+            <h3>Exercise 1.2- Running Lights with Code</h3>
             <br>
-            <iframe src="https://ichat2788.autodesk360.com/shares/public/SH9285eQTcf875d3c539cd678238f4487c47?mode=embed" width="100%" height="80%" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <a id="EX1.3"></a>
-            <h3>Exercise 1.3- Cutting Depth</h3>
-            <br>
-            <iframe src="https://ichat2788.autodesk360.com/shares/public/SH9285eQTcf875d3c5390a9194a064d4dd52?mode=embed" width="100%" height="80%" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
+            <iframe width="100%" height="80%" src="https://www.tinkercad.com/embed/eLKEYQveBYR?editbtn=1" frameborder="0" marginwidth="0" marginheight="0" scrolling="no"></iframe>
             <br>
             <br>
             <br>
             <br>
             <br>
-            <a id="ASBX"></a>
-            <h3>Accessory Box(Assignment)</h3>
-            <br>
-            <iframe src="https://ichat2788.autodesk360.com/shares/public/SH9285eQTcf875d3c539074d8cfc7788c65b?mode=embed" width="100%" height="80%" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-
         </div>
       </div>
 
