--- a/learn.html
+++ b/learn.html
@@ -37,9 +37,6 @@
             <li><a href="#3Dprint">3D Printing</a></li>
             <li><a href="LASC.html">Laser Cutting</a></li>
             <li><a href="#electronic">Electronics</a></li>
-            <li><a href="#arduino">Arduino</a></li>
-            <li><a href="#input">Input Devices</a></li>
-            <li><a href="#output">Output Devices</a></li>
           </ul>
         </div>
 
@@ -61,22 +58,14 @@
             <a href="CCAADD.html"><h3>CAD (Computer Aided Design)</h3></a>
             <hr>
             <a id="3Dprint"></a>
-            <h3>3D Printing (Additive Manufacturing)</h3>
+            <a href="3Dprint.html"><h3>3D Printing (Additive Manufacturing)</h3></a>
             <hr>
             <a id="lascut"></a>
-            <h3>Laser Cutting</h3>
+            <a href="LASC.html"><h3>Laser Cutting</h3></a>
             <hr>
             <a id="electronic"></a>
-            <h3>Electronics</h3>
+            <a href="electric.html"><h3>Electronics</h3></a>
             <hr>
-            <a id="arduino"></a>
-            <h3>Arduino</h3>
-            <hr>
-            <a id="input"></a>
-            <h3>Input Devices</h3>
-            <hr>
-            <a id="output"></a>
-            <h3>Output Devices</h3>
             <br>
             <br>
             <br>
@@ -92,3 +81,4 @@
     </div>
   <footer>
 </html>
+D
